// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`example.html format 1`] = `
====================================options=====================================
parsers: ["html"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<span><![CDATA[<sender>John Smith</sender>]]></span>

<span><![CDATA[1]]> a <![CDATA[2]]></span>
<span><![CDATA[1]]> <br> <![CDATA[2]]></span>

=====================================output=====================================
<span><![CDATA[<sender>John Smith</sender>]]></span>

<span><![CDATA[1]]> a <![CDATA[2]]></span>
<span
  ><![CDATA[1]]> <br />
  <![CDATA[2]]></span
>

================================================================================
`;

exports[`multiline.html format 1`] = `
====================================options=====================================
parsers: ["html"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<![CDATA[<app-alert>
  Preserve     all spaces and line breaks.
  {{ untouched }}
</app-alert>]]>

=====================================output=====================================
<![CDATA[<app-alert>
  Preserve     all spaces and line breaks.
  {{ untouched }}
</app-alert>]]>

================================================================================
`;
